一旦全部これはデバッグ用ですば

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         </div>
         </main>
     </article>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
