なんとidにするべきところをclassにしてしまっていた

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         noVNCとかでブラウザ画面でを実装しなかったのは<br>
         軽量シンプルを目指したのとめんどくさかったからです。</p>
         <h2 id="network">ネットワーク</h2>
-        <div class="network-status">
-            <h3>接続中のネットワーク</h3>
-            <p>まだ読んでる</p>
+        <div id="network-status">
+           <p>読み込み中...</p>
         </div>
         <h2 id="bluetooth">bluetooth</h2>
         <p>まだ</p>
