<div>から独立させた

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
            <p>読み込み中...</p>
          <hr style="margin: 2em 0;">
           <h3>有線LAN設定</h3>
+        </div></div>
          <form id="wired-lan-form" style="text-align: left; max-width: 400px; margin: auto;">
         <div style="margin-bottom: 1em;">
             <input type="radio" id="dhcp" name="ip_method" value="auto" checked>
@@ -70,7 +71,7 @@
         
         <button type="submit" style="width: 100%; padding: 0.8em; margin-top: 1em; background-color: #5cb85c; color: white; border: none; border-radius: 5px; cursor: pointer;">設定を適用</button>
          </form>
-        <div id="form-result" style="margin-top: 1em;"></div></div></div>
+        <div id="form-result" style="margin-top: 1em;"></div>
         <div class="set-sec"><h2 id="bluetooth">bluetooth</h2>
         <p>まだ</p></div>
         <div class="set-sec"><h2 id="vol-bri">音量・明るさ</h2>
