--- a/index.html
+++ b/index.html
@@ -76,24 +76,10 @@
         <div id="form-result" style="margin-top: 1em;"></div>
 
 
-        <div class="set-sec"><h2 id="bluetooth">bluetooth</h2>
-        <p></p>
+        <div class="set-sec"><h2 id="bluetooth">Bluetooth</h2>
         <div id="bluetooth-status">
-           <p>読み込み中...</p>
-         <hr style="margin: 2em 0;">
-          <h3>Bluetooth設定</h3>
+        <p>読み込み中...</p>
         </div>
-        <form id="bluetooth-form" style="text-align: left; max-width: 400px; margin: auto;">
-            <div style="margin-bottom: 1em;">
-                <label for="bluetooth-name">デバイス名:</label>
-                <input type="text" id="bluetooth-name" placeholder="デバイス名" style="width: 100%; padding: 0.5em; margin-bottom: 0.5em;">
-            </div>
-            <div style="margin-bottom: 1em;">
-                <label for="bluetooth-pairing-code">ペアリングコード:</label>
-                <input type="text" id="bluetooth-pairing-code" placeholder="ペアリングコード" style="width: 100%; padding: 0.5em; margin-bottom: 0.5em;">
-            </div>
-            <button type="submit" style="width: 100%; padding: 0.8em; margin-top: 1em; background-color: #5cb85c; color: white; border: none; border-radius: 5px; cursor: pointer;">接続</button>
-        </form>
       </div>
 
 
