--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
 
         <div class="set-sec"><h2 id="vol-bri">音量・明るさ</h2>
-        <p>まだ</p></div>
+          <div id="media-controls">
+        <p>読み込み中...</p>
+         </div>
 
 
         <div class="set-sec"><h2 id="battery">バッテリー</h2>
