バッテリーの状態を表示する機能のプロトタイプ

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 
 
         <div class="set-sec"><h2 id="battery">バッテリー</h2>
-        <p>まだ</p></div>
+        <div id="battery-status">
+         <p>読み込み中...</p>
+        </div></div>
 
 
         <div class="set-sec"><h2 id="updates">アップデート</h2>
