installer作ってみた

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <article>
         <aside class="navi">
         <ol class="toc">
-            <li><a href="#power"><span class="icon"><img src="image/battery-icon.png" alt="電源管理"></span>
+            <li><a href="#power"><span class="icon"><img src="image/power-icon.png" alt="電源管理"></span>
                 <span class="title">電源管理</span></a></li>
             <li><a href="#cli"><span class="icon"><img src="image/cli-icon.png" alt="CLI,コマンドライン"></span>
                 <span class="title">CLI,コマンドライン</span></a></li>
@@ -24,8 +24,7 @@
                 <span class="title">バッテリー</span></a></li>
             <li><a href="#updates"><span class="icon"><img src="image/update-icon.png" alt="アップデート"></span>
                 <span class="title">アップデート</span></a></li>
-            <li><a href="#input"><span class="icon"><img src="image/input-icon.png" alt="入力・キーボード"></span>
-                <span class="title">入力・キーボード</span></a></li>
+        
         </ol>
         </aside>
         <main class="content">
@@ -99,8 +98,6 @@
         <p>まだ</p></div>
 
 
-        <div class="set-sec"><h2 id="input">入力・キーボード</h2>
-        <p>まだ</p></div>
 
         </div>
         </main>
